--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(Dynamic_Array C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(Dynamic_Array main.c)
+add_executable(Dynamic_Array main.c
+        Vector.c
+        Vector.h
+        Buffer.c
+        Buffer.h)
